--- a/config/shelly.yml
+++ b/config/shelly.yml
@@ -1,9 +1,12 @@
---- 
+---
 repos: 
   github: 
-  - grimen/my_shell_scripts
 aliases: 
+  pastebin: 
+    aaa: "1234"
+    aaaa: "1234"
   github: 
-    my_scripts: grimen/my_shell_scripts
+    my_scripts: grimen/my_shell_scripts/install_memcached_osx
   pastie: 
     my_favorite_script: "436580"
+  pastebin2: 
